--- a/app/index.html
+++ b/app/index.html
@@ -48,12 +48,12 @@
         </form>
       </div>
       <div class="container pair" ng-if="IsPaired">
-        <h4>Congralutions</h4>
+        <h4>Congratulations</h4>
         <p>Your Sphere is paired</p>
 
         <div ng-if="Node.local_ip">
           <h5>Navigate to your sphere at {{ Node.local_ip }}</h5>
-          <small>Note: you will need to be on the same network</small><br>
+          <small>Note: you will need to be on the same network</small><br><br>
           <a class="btn" href="http://{{ Node.local_ip }}">Go to my Sphere</a>
         </div>
       </div>
@@ -82,6 +82,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/hammerjs/hammer.js"></script>
     <script src="bower_components/angular-hammer/angular-hammer.js"></script>
@@ -92,6 +93,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/backendstub.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/svgloader.js"></script>
         <script src="scripts/controllers/paircontroller.js"></script>
